@@ -1,4 +1,14 @@
 2017-02-09 0.8.5 indev
+Fix building on Windows.
+Behavior changes:
+ 1. DnD into the main window now causes the dropped
+ file to play.
+ 2. Switch back to w32usleep to increase bpm accuracy.
+ 3. Scan for plugins in application folder (in Windows),
+ not in the working directory.
+
+
+2017-02-09 0.8.5 indev
 Add extra midi formats support via the file reader API.
 Fix note counting.
 
